<resources>
    <string name="app_name">Lab08_Firebase</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register_here">Register here</string>
    <string name="type_password">Type password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="your_name">Your name</string>
</resources>